overlap fix

--- a/src/styles/cyberia-estates.css
+++ b/src/styles/cyberia-estates.css
@@ -376,7 +376,7 @@ display:block;
 width:100%;
 margin-inline:auto;
 background:transparent;
-padding-top:30%;
+padding-top:60%;
 }
 
 iframe#trailer-cyberia {
@@ -416,6 +416,6 @@ div.background-image-cyberia {
 }
 div.container-estate-btns {
   display:block;
-  width:75%;
+  width:100%;
   
 }
